GENERATOR_OUTPUT/manifests/kubeflow-tools/volumes/volumes-web-app/patches/patch-volumes-web-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: volumes-web-app-volumes-web-app
  namespace: kubeflow
spec:
  hosts:
    - "deploykf.s8s-core-istio.stack8s.com"
  gateways:
    - istio-ingress/deploykf-gateway
