GENERATOR_OUTPUT/manifests/kubeflow-tools/volumes/volumes-web-app/patches/patch-volumes-web-app-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: volumes-web-app
  namespace: kubeflow
spec:
  rules:
    ## allow requests from `deploykf-istio-gateway` Pods
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-ingress/sa/istio-ingress"
      to:
        - operation:
            ports:
              - "5000"
